Update: 騾ｱ髢灘､ｩ豌嶺ｺ亥ｱ讖溯・縲ゞI謾ｹ蝟・・撼陦ｨ遉ｺ繝懊ち繝ｳ蜑企勁

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,15 @@ dist-ssr
 .env.local
 .env.production.local
 .env.development.local
+
+# Android/Gradle
+.gradle
+*.iml
+.idea
+local.properties
+
+# Vercel
+.vercel
+
+# Vercel
+.vercel
